--- a/src/worker_config.json
+++ b/src/worker_config.json
@@ -1,4 +1,6 @@
 {
   "workerIps":["192.168.33.10", "192.168.33.11", "192.168.33.12"],
-  "port": 8080
+  "port": 8080,
+  "worker": "CalculatePrimeFactors",
+  "leader": "PrimeFactors"
 }
